@@ -1,5 +1,5 @@
 /*
- * $Id: maindll.c,v 1.8 2005/02/27 21:28:25 andijahja Exp $
+ * $Id: maindll.c,v 1.9 2008/03/27 10:26:45 likewolf Exp $
  */
 
 /*
@@ -62,19 +62,18 @@
 
 #if defined(HB_OS_WIN_32)
 #if defined(HB_DLL_REQUIRED_DLLMAIN)
-HB_EXPORT BOOL WINAPI DllMain( HINSTANCE hInstance, DWORD fdwReason, PVOID pvReserved )
+BOOL WINAPI DllMain( HINSTANCE hInstance, DWORD fdwReason, PVOID pvReserved )
 {
    HB_TRACE( HB_TR_DEBUG, ("DllMain(%p, %p, %d)", hInstance, fdwReason,
              pvReserved ) );
 #else
-HB_EXPORT BOOL WINAPI DllEntryPoint( HINSTANCE hInstance, DWORD fdwReason, PVOID pvReserved )
+BOOL WINAPI DllEntryPoint( HINSTANCE hInstance, DWORD fdwReason, PVOID pvReserved )
 {
    HB_TRACE( HB_TR_DEBUG, ("DllEntryPoint(%p, %p, %d)", hInstance, fdwReason,
              pvReserved ) );
 #endif
 
    HB_SYMBOL_UNUSED( hInstance );
-   HB_SYMBOL_UNUSED( fdwReason );
    HB_SYMBOL_UNUSED( pvReserved );
 
    switch( fdwReason )
